--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Silkscreen&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -8,8 +9,8 @@
   --primary-color: #111827;
   --secondary-color: #374151;
   --accent-color: #888888;
-  --text-primary: #E0E0E0;
-  --text-secondary: #B0B0B0;
+  --text-primary: #e0e0e0;
+  --text-secondary: #b0b0b0;
   --background: #121212;
   --background-alt: #374151;
   --border-color: #444444;
@@ -19,7 +20,7 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
     sans-serif;
-  background: var(--background-alt);
+  background: var(--background);
   color: var(--text-primary);
   line-height: 1.6;
 }
@@ -110,9 +111,12 @@ body {
 
 .feature-card {
   background: var(--background);
-  padding: clamp(24px, 4vw, 32px);
+  backdrop-filter: blur(22px) saturate(147%);
+  -webkit-backdrop-filter: blur(22px) saturate(147%);
+  background-color: rgba(55, 65, 81, 0.58);
   border-radius: 12px;
-  border: 1px solid var(--border-color);
+  border: 1px solid rgba(255, 255, 255, 0.125);
+  padding: clamp(24px, 4vw, 32px);
   transition: all 0.3s ease;
 }
 
@@ -150,4 +154,27 @@ body {
   font-size: 15px;
   color: var(--text-secondary);
   line-height: 1.6;
+}
+
+#special-you {
+  font-family: "Silkscreen", sans-serif;
+  color: var(--accent-color);
+  text-shadow: 0 0 18px white;
+  position: relative;
+  color: white;
+}
+#special-you::after,
+#special-you::before {
+  content: attr(data-text);
+  position: absolute;
+  left: 3px;
+  text-shadow: none;
+  background-clip: text;
+  color: transparent;
+  mix-blend-mode: lighten;
+  pointer-events: none;
+}
+#special-you::before {
+  left: -3px;
+  mix-blend-mode: lighten;
 }
